--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1> Ordnance </h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<h1>Ordnance</h1>
+								<p>We are active platoon with a main motto of mutual assistance<a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
