--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="02.png" alt="02" style="width: 50px;">
+							<img src="images/02.png" alt="Ordnance Platoon Logo" style="width: 50px;">
 						</div>
 						<div class="content">
 							<div class="inner">
