--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ordnance</h1>
-								<p>We are active platoon with a main motto of mutual assistance<a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>We are an active platoon with a main motto of mutual assistance. That strives for active
+								environment that ensures everyone gives their contribution and can enjoy theirs in real-life matters.</p>
 							</div>
 						</div>
 						<nav>
