--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ordnance</h1>
-								<p>We are an active platoon with a main motto of mutual assistance. That strives for active
-								environment that ensures everyone gives their contribution and can enjoy theirs in real-life matters.</p>
+								<p>We are an active platoon with a main motto of mutual assistance. That strives for an active
+								environment while ensuring everyone contributes with rules that balance out playtime and real-life time.</p>
 							</div>
 						</div>
 						<nav>
