--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p> Hello there commanders o7, I'm Peipa the instructor of Ordnance at first Ordnance started from a very casual platoon which evolved under instructor Pei's management it happened because Pei wanted Ordnance to still be viable even on the harsh Change of Dark winter server competitive environment.</p>
+								<p> Maybe many people see Pei as being a try-hard but in reality, instructor Pei is just like you guys who wants an active platoon while also still wanting to have IRL matters too. Since Pei has a small family business that needs to be managed outside this game, there for this kind of Self-sufficient Platoon System has been created based on his experience. Everything has already been layout through a system that Pei calls rules either how many contributions or how long you can go off as long as you meet the requirement.</p>
 							</article>
 
 						<!-- Work -->
