--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								
-								<li><a href="#requirement">About</a></li>
+								<li><a href="#requirement">Requirement</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
