--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<img src="images/02.png" alt="Ordnance Platoon Logo" style="width: 88px;" align="center">
+							<div class="logo"></div>
+							<div class="content">	
 						</div>
 						<div class="content">
 							<div class="inner">
