--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 				<!-- Header -->
 					<header id="header">
-							<div class="logo"></div>
-							<div class="content">	
+					<div class="logo" style="background-image: url('images/02.png')"></div>
+								
 						</div>
 						<div class="content">
 							<div class="inner">
