--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 					<div class="logo" style="background-image: url('images/02.png')"></div>
-								
+					<div class="content">			
 						</div>
 						<div class="content">
 							<div class="inner">
