--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> Hello there commanders o7, I'm Peipa the instructor of Ordnance at first Ordnance started from a very casual platoon which evolved under instructor Pei's management it happened because Pei wanted Ordnance to still be viable even on the harsh Change of Dark winter server competitive environment.</p>
-								<p> Maybe many people see Pei as being a try-hard but in reality, instructor Pei is just like you guys who wants an active platoon while also still wanting to have IRL time too. Since Pei has a small family business that needs to be managed outside this game, there for this kind of Self-sufficient Platoon System has been created based on his experience. Everything has already been layout through a system that Pei calls rules either how many contributions or how long you can go off as long as you meet the requirements you can do it without worrying about being changed.</p>
+								<p> Maybe many people see Pei as being a try-hard but in reality, instructor Pei is just like you guys who wants an active platoon while also still wanting to have IRL time too. Since Pei has work that needs to be managed outside this game, there for this kind of Self-sufficient Platoon System has been created based on his experience. Everything has already been layout through a system that Pei calls rules either how many contributions or how long you can go off as long as you meet the requirements you can do it without worrying about being changed.</p>
 							</article>
 
 						
