--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
 							<article id="About Us">
 								<h2 class="major">About Us</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> Ordnance is a part of marshie cozy observatory Community we are a platoon with a record Rank 59 on the last GS S5, semi competitive platoon with lvl 7, who focus on providing and active environment on the platoon in order to maintain stability for your troop to progress, also have a friendly fellow commanders and comando to chat with. What we can promise you that our guild will be working base on mutual assistance so everyone on this platoon gonna be active and move forward with you as long as you active in the platoon. 
-									We also have multiple guilds on our discord community server besides gfl2 exilium and the server also home to resident Vtubers. The server offers a friendly chatting English-speaking environment, weekly karaoke sessions, lots of fun events and even giveaways so dont miss out the funnn !
-									We’re currently looking for active fellow commanders new or experienced who are seeking a fun community to interact and join our community for GFL2.
-									Requirements
+								<p> Ordnance is a part of marshie cozy observatory Community we are a platoon with a record Rank 59 on the last GS S5, semi competitive platoon with lvl 7, who focus on providing and active environment on the platoon in order to maintain stability for your troop to progress, also have a friendly fellow commanders and comando to chat with. What we can promise you that our guild will be working base on mutual assistance so everyone on this platoon gonna be active and move forward with you as long as you active in the platoon. We also have multiple guilds on our discord community server besides gfl2 exilium and the server also home to resident Vtubers. The server offers a friendly chatting English-speaking environment, weekly karaoke sessions, lots of fun events and even giveaways so dont miss out the fun. We’re currently looking for active fellow commanders new or experienced who are seeking a fun community to interact and join our community for GFL2. Requirements
 									* Active
 									* Lvl 60 / lvl 55 (negotiable)
 									* Can understand Platoon rules since our rules focus on reinforcing mutual assistance and activities 
@@ -70,7 +67,8 @@
 									*  SEA Guilds for PtN
 									*  Global & CN Guilds for Aether Gazer
 									*  SEA Guild for Outerplane 
-									* LOTS of mobile MOBA players (WR, HoK, MLBB, OA) </p>
+									* LOTS of mobile MOBA players (WR, HoK, MLBB, OA) 
+								</p>
 							</article>
 
 						<!-- Contact -->
