--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="#intro">Intro</a></li>
 								
 								<li><a href="#AboutUs">About Us</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#Apply">Apply</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -51,40 +51,16 @@
 							<article id="AboutUs">
 								<h2 class="major">About Us</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> Ordnance is a part of marshie cozy observatory Community we are a platoon with a record Rank 59 on the last GS S5, a semi-competitive platoon with level 7, who focus on providing an active environment on the platoon to maintain stability for your troop to progress, also have friendly fellow commanders and commando to chat with.</p> 
+								<p> Ordnance is a part of Marshie Cozy Observatory Community we are a platoon with a record Rank 59 on the last GS S5, a semi-competitive platoon with level 7, who focus on providing an active environment on the platoon to maintain stability for your troop to progress, also have friendly fellow commanders and commando to chat with.</p> 
 								<p> What we can promise you is that our guild will be working based on mutual assistance so everyone on this platoon gonna be active and move forward with you as long as you are active in the platoon. We also have multiple guilds on our discord community server besides gfl2 exilium and the server is also home to resident Vtubers. 
 								The server offers a friendly chatting English-speaking environment, weekly karaoke sessions, lots of fun events and even giveaways so don't miss out on the fun.</p>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+							<article id="Apply">
+								<a href="https://discord.com/channels/864854041878986753/1088455087749345310" target="_blank" class="major">
+								<h2 class="major">Apply</h2>
+								
 							</article>
 
 						<!-- Elements -->
