--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<h2 class="major">About Us</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p> Ordnance is a part of Marshie Cozy Observatory Community we are a platoon with a record Rank 59 on the last GS S5, a semi-competitive platoon with level 7, who focus on providing an active environment on the platoon to maintain stability for your troop to progress, also have friendly fellow commanders and commando to chat with.</p> 
-								<p> What we can promise you is that our guild will be working based on mutual assistance so everyone on this platoon gonna be active and move forward with you as long as you are active in the platoon. We also have multiple guilds on our discord community server besides gfl2 exilium and the server is also home to resident Vtubers. 
+								<p> What we can promise you is that our Platoon will be working based on mutual assistance so everyone on this platoon gonna be active and move forward with you as long as you are active in the platoon. We also have multiple guilds on our discord community server besides gfl2 exilium and the server is also home to resident Vtubers. 
 								The server offers a friendly chatting English-speaking environment, weekly karaoke sessions, lots of fun events and even giveaways so don't miss out on the fun.</p>
 							</article>
 
