--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Ordnance. Design: HTML5Pei.</p>
+						<p class="copyright">&copy; Ordnance. Design: HTMLPei.</p>
 					</footer>
 
 			</div>
