--- a/index.html
+++ b/index.html
@@ -319,11 +319,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-<script>
-        document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
-        });
-    </script>
+			<script> document.addEventListener('contextmenu', function(e) {e.preventDefault();});</script>
 		
 	</body>
 </html>
