--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="#intro">Intro</a></li>
 								
 								<li><a href="#AboutUs">About Us</a></li>
-								<li><a href="https://discord.com/channels/864854041878986753/1088455087749345310">Apply</a></li>
+								<li><a href="https://discord.gg/marshieemellow">Apply</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
