--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 							<article id="Apply">
 								<h2 class="major">Apply</h2>
 								<span class="image main"><img src="images/11.jpg" alt="" /></span>
-								<p>You can join our server first at <a href="https://discord.gg/marshieemellow"><img src="images/20.png" alt="" /></a>.</p>
+								<p>You can join our server first at <a href="https://discord.gg/marshieemellow"><img src="images/20.png" alt="" /><size=15px</size></a>.</p>
 								<p>After that if you can't find the Guild Application Channel you can tap the icon below it will direct you to that channel.</p>
-								<p><a href="https://discord.com/channels/864854041878986753/1088455087749345310"><img src="images/21.jpg" alt=""/></a></p>
+								<p><a href="https://discord.com/channels/864854041878986753/1088455087749345310"><img src="images/21.jpg" alt=""/><size=15px</size></a></p>
 
 						<!-- Elements -->
 							<article id="elements">
