--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@
 							<article id="Apply">
 								<h2 class="major">Apply</h2>
 								<span class="image main"><img src="images/11.jpg" alt="" /></span>
-								<p>You can join our server first by tapping the icon bellow</p> 
-								<p><a href="https://discord.gg/marshieemellow"><img src="images/20.png" alt=""/><style="width :20px; height: 20px</style></a>.</p>
+								<p>You can join our server first by tapping the icon below</p>
+								<p>
+								  <a href="https://discord.gg/marshiemellow">
+								    <img src="images/20.png" alt="Discord Server" style="width:20px; height:20px;">
+								  </a>
+								</p>
+								
 								<p>After that if you can't find the Guild Application Channel you can tap the icon below it will direct you to that channel.</p>
-								<p><a href="https://discord.com/channels/864854041878986753/1088455087749345310"><img src="images/21.jpg" alt=""/><style="width :20px; height: 20px</style></a></p>
-
+								<p>
+								  <a href="https://discord.com/channels/864854041878986753/1088455087749345310">
+								    <img src="images/21.jpg" alt="Application Channel" style="width:20px; height:20px;">
+								  </a>
+								</p>
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
