--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<article id="Apply">
 								<h2 class="major">Apply</h2>
 								<span class="image main"><img src="images/11.jpg" alt="" /></span>
-								<p>You can join our server first by tapping the icon below</p>
+								<p>You can join our server first by tapping the icon below.</p>
 								<p>
 								  <a href="https://discord.gg/marshiemellow">
 								    <img src="images/20.png" alt="Discord Server" style="width:50px; height:50px;">
