--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								  </a>
 								</p>
 								
-								<p>After that if you can't find the Guild Application Channel you can tap the icon below it will direct you to that channel.</p>
+								<p>After that if you can't find the Guild Application Channel for opening a ticket, you can tap the icon below to direct you to that channel.</p>
 								<p>
 								  <a href="https://discord.com/channels/864854041878986753/1088455087749345310">
 								    <img src="images/21.jpg" alt="Application Channel" style="width:70px; height:70px;">
